@@ -5,15 +5,15 @@
  */
 
 $digitTransformTable = array(
-	'0' => '০',
-	'1' => '১',
-	'2' => '২',
-	'3' => '৩',
-	'4' => '৪',
-	'5' => '৫',
-	'6' => '৬',
-	'7' => '৭',
-	'8' => '৮',
-	'9' => '৯'
+	'0' => '০', # &#x09e6;
+	'1' => '১', # &#x09e7;
+	'2' => '২', # &#x09e8;
+	'3' => '৩', # &#x09e9;
+	'4' => '৪', # &#x09ea;
+	'5' => '৫', # &#x09eb;
+	'6' => '৬', # &#x09ec;
+	'7' => '৭', # &#x09ed;
+	'8' => '৮', # &#x09ee;
+	'9' => '৯', # &#x09ef;
 );
 ?>
