@@ -6,16 +6,16 @@
   * @author Ævar Arnfjörð Bjarmason <avarab@gmail.com>
   */
 $digitTransformTable = array(
-	'0' => '༠',
-	'1' => '༡',
-	'2' => '༢',
-	'3' => '༣',
-	'4' => '༤',
-	'5' => '༥',
-	'6' => '༦',
-	'7' => '༧',
-	'8' => '༨',
-	'9' => '༩'
+	'0' => '༠', # &#x0f20;
+	'1' => '༡', # &#x0f21;
+	'2' => '༢', # &#x0f22;
+	'3' => '༣', # &#x0f23;
+	'4' => '༤', # &#x0f24;
+	'5' => '༥', # &#x0f25;
+	'6' => '༦', # &#x0f26;
+	'7' => '༧', # &#x0f27;
+	'8' => '༨', # &#x0f28;
+	'9' => '༩', # &#x0f29;
 );
 
 ?>
