@@ -20,16 +20,16 @@ $namespaceNames = array(
 );
 
 $digitTransformTable = array(
-	"0" => "०",
-	"1" => "१",
-	"2" => "२",
-	"3" => "३",
-	"4" => "४",
-	"5" => "५",
-	"6" => "६",
-	"7" => "७",
-	"8" => "८",
-	"9" => "९"
+	'0' => '०', # &#x0966;
+	'1' => '१', # &#x0967;
+	'2' => '२', # &#x0968;
+	'3' => '३', # &#x0969;
+	'4' => '४', # &#x096a;
+	'5' => '५', # &#x096b;
+	'6' => '६', # &#x096c;
+	'7' => '७', # &#x096d;
+	'8' => '८', # &#x096e;
+	'9' => '९', # &#x096f;
 );
 $linkTrail = "/^([a-z]+)(.*)\$/sD";
 
