@@ -6,16 +6,16 @@
   * @author Ævar Arnfjörð Bjarmason <avarab@gmail.com>
   */
 $digitTransformTable = array(
-	'0' => '០',
-	'1' => '១',
-	'2' => '២',
-	'3' => '៣',
-	'4' => '៤',
-	'5' => '៥',
-	'6' => '៦',
-	'7' => '៧',
-	'8' => '៨',
-	'9' => '៩'
+	'0' => '០', # &#x17e0;
+	'1' => '១', # &#x17e1;
+	'2' => '២', # &#x17e2;
+	'3' => '៣', # &#x17e3;
+	'4' => '៤', # &#x17e4;
+	'5' => '៥', # &#x17e5;
+	'6' => '៦', # &#x17e6;
+	'7' => '៧', # &#x17e7;
+	'8' => '៨', # &#x17e8;
+	'9' => '៩', # &#x17e9;
 );
 
 ?>
