@@ -76,6 +76,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9973) Changed size was shown in advanced recentchanges collapsible items
   with $wgRCShowChangedSized = false.
 * Fix PHP strict standards warning in enhanced recent changes.
+* (bug 5850) Added hexadecimal html entities comments for $digitTransformTable
+  entries.
 
 == MediaWiki API changes since 1.10 ==
 
